--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <video loop><source src="./video/rain.mp4" type="video/mp4" /></video>
       </div>
       <div class="selecionaTempo">
-        <button data-time="120">2 minutes</button>
-        <button data-time="300">5 minutes</button>
-        <button data-time="600">10 minutes</button>
+        <button data-time="120">2 minutos</button>
+        <button data-time="300">5 minutos</button>
+        <button data-time="600">10 minutos</button>
       </div>
       <div class="playerContainer">
         <audio class="song">
-          <source src="./sounds/rain" />
+          <source src="./sounds/rain.mp3" />
         </audio>
         <img src="./svg/play.svg" alt="tocar" class="play" />
         <svg
