base 1.0 mudando para classes

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         <h3 class="mostraTempo">0:00</h3>
       </div>
       <div class="selecionaMusica">
-        <button data-sound="./sounds/rain.mp3">
+        <button data-sound="./sounds/rain.mp3" data-video="./video/rain.mp4">
           <img src="./svg/rain.svg" alt="chuva" />
         </button>
-        <button data-sound="./sounds/beach.mp3">
+        <button data-sound="./sounds/beach.mp3" data-video="./video/beach.mp4">
           <img src="./svg/beach.svg" alt="praia" />
         </button>
       </div>
