funcao de trocar de musica retirada

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         </svg>
         <h3 class="mostraTempo">0:00</h3>
       </div>
-      <div class="selecionaMusica">
+      <!-- <div class="selecionaMusica">
         <button data-sound="./sounds/rain.mp3" data-video="./video/rain.mp4">
           <img src="./svg/rain.svg" alt="chuva" />
         </button>
         <button data-sound="./sounds/beach.mp3" data-video="./video/beach.mp4">
           <img src="./svg/beach.svg" alt="praia" />
         </button>
-      </div>
+      </div> -->
     </div>
 
     <script src="./app.js"></script>
