--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Aplicativo</title>
   </head>
+  <header>
+    <div>
+      <label for="volume-control"><h3 style="color: white">Volume</h3></label>
+      <input
+        type="range"
+        class="volume-control"
+        min="0"
+        max="1"
+        step="0.1"
+        value="1"
+      />
+    </div>
+  </header>
   <body>
     <div class="app">
       <div class="vidContainer">
         <video loop><source src="./video/rain.mp4" type="video/mp4" /></video>
       </div>
+
       <div class="selecionaTempo">
         <button data-time="120">2 minutos</button>
         <button data-time="300">5 minutos</button>
@@ -54,6 +68,7 @@
             stroke-width="20"
           />
         </svg>
+
         <h3 class="mostraTempo">0:00</h3>
       </div>
       <!-- <div class="selecionaMusica">
